home-k8s/apps/open-webui/overlays/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui
spec:
  template:
    spec:
      # We want this deployment on a specific node
      nodeSelector:
        kubernetes.io/hostname: home-k8s01.sigurs.io
