home-k8s/apps/open-webui/overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui
spec:
  rules:
    - host: chat.home-k8s01.sigurs.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: open-webui
              port:
                name: http
